add scroll to top

--- a/index.html
+++ b/index.html
@@ -96,5 +96,11 @@ h(Math,"asinh",xr.asinh,Math.asinh(1e300)===Infinity);h(Math,"atanh",xr.atanh,Ma
 ;require("harlowe")}());
 </script>
 
+<script>
+window.onload = function() {
+  window.scrollTo(0, 0);
+};
+</script>
+
 </body>
 </html>
